[project]
name = "db-search-api"
version = "0.1.0"
description = "Fast API for uploading and searching databases (<1s)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<0.116",
    "uvicorn>=0.30.0,<0.35",
    "python-multipart>=0.0.9,<0.1",
    "aiofiles>=24.1.0,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9",
    "pytest-asyncio>=0.23.0,<1",
    "httpx>=0.27.0,<1",
    "ruff>=0.5.0,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
